- Removed ratings - Fixed admin-edit button on smaller screens - Added redesigned popover help area on navbar-search

--- a/airbitz/airbitz/static/less/global-stylesheet.less
+++ b/airbitz/airbitz/static/less/global-stylesheet.less
@@ -182,6 +182,16 @@ body {
 
 
     // DIRECTORY BUSINESS INFO
+    .biz-info-header {
+
+        .admin-edit {
+            position: absolute;
+            right: 15px;
+            top: 25px;
+            z-index: 9999;
+        }
+    }
+
     .biz-info-one {
 
         margin-bottom: 30px;
