--- a/airbitz/airbitz/static/less/navbar.less
+++ b/airbitz/airbitz/static/less/navbar.less
@@ -53,3 +53,26 @@
     padding-left: 15px;
     padding-right: 15px;
 }
+
+
+// SEARCH
+#navbar-search {
+
+    #help-search {
+        position: relative;
+        top: 7px;
+        left: -5px;
+        color: #4CB7F3;
+    }
+    .popover {
+        left: 327.5;
+        font-size: 12px;
+        max-width: 500px;
+        
+        hr {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+    }
+
+}
